# algorithms-project-69

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pytest.yml
search_engine/: __init__.py  search_engine.py
tests/: test_inverted_index.py  test_search.py  test_search_engine.py
